Don't dispatch beforeunload events for downloads

BUG=812293

Change-Id: I1375ecbdef13ea43ac350cdae6e550267166fadc
Reviewed-on: https://chromium-review.googlesource.com/934204
Reviewed-by: Mike West <mkwst@chromium.org>
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539097}
Former-commit-id: cd05cee6edd1301f63d44306ff120820b6a4cfde